--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/hapi__boom": "^9.0.1",
         "bcrypt": "^5.1.0",
         "dotenv": "^16.3.1",
+        "hapi-auth-jwt2": "^10.4.0",
         "hapi-sequelizejs": "^4.6.1",
         "joi": "^17.9.2",
         "jsonwebtoken": "^9.0.1",
