--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "dotenv": "^16.3.1",
         "hapi-auth-jwt2": "^10.4.0",
         "hapi-sequelizejs": "^4.6.1",
+        "hapi-swagger": "^17.1.0",
         "joi": "^17.9.2",
         "jsonwebtoken": "^9.0.1",
         "multer": "^1.4.5-lts.1",
